projects - fix visual bug where header overlapped with featured projects header

--- a/src/app/components/projects/projects.scss
+++ b/src/app/components/projects/projects.scss
@@ -1,4 +1,6 @@
 .projects {
+    padding-top: 100px;
+
     &__grid {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
